@@ -38,6 +38,7 @@ v30.0.00
         Activities: added a description field to the cost section for activities
         Behaviour: added Add Multiple button to Behaviour tab of student profile
         Individual Needs: enabled viewing IN records for past students as read-only
+        Library: added the option to send an email to parents when lending a library item
         Messenger: enabled resending to any recipient when read receipts are off in Send Report
         Messenger: added clarifying text to Applicants target which only includes Accepted applications
         Messenger: enabled users with Manage Messages_all access to see shareable link in Send Report
